# training-task

./: .gitignore  CMakeLists.txt  compare_test.cpp  config.yaml  config1.yaml  config_.yaml  main.cpp  wannabe-client.cpp  wannabe-server.cpp
opencv_functional/: CMakeLists.txt  opencv_functional.cpp  opencv_functional.h  opencv_functional_v2.cpp  opencv_functional_v2.h
